--- a/_posts/bible-studies/Romans/2022-11-13-Romans-01-v17-32.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-01-v17-32.md
@@ -48,7 +48,7 @@ Thus, we have established that salvation is entirely based on faith and not at a
 Paul then described every kind of human vice from verses 23 to 32.
 
 <span style="color: rgb(159, 29, 33);">
-<i>"<sup>23</sup>and exchanged the glory of the immortal God for an <strong>image</strong> resembling mortal human beings or birds or four-footed animals or reptiles. <sup>24</sup>Therefore God gave them over in the desires of their hearts to impurity, to <strong>dishonor their bodies</strong> among themselves. <sup>25<They exchanged the truth of God for a lie and <strong>worshiped and served the creation</strong> rather than the Creator, who is blessed forever! Amen. <sup>26</sup>For this reason God gave them over to dishonorable passions. For their women exchanged the natural <strong>sexual relations</strong> for unnatural ones, <sup>27</sup>and likewise the men also <strong>abandoned natural relations</strong> with women and were inflamed in their passions for one another. <strong>Men committed shameless acts with men</strong> and received in themselves the due penalty for their error. <sup>28</sup>And just as they did not see fit to acknowledge God, God gave them over to a depraved mind, to do what should not be done. <sup>29</sup>They are filled with <strong>every kind of unrighteousness, wickedness, covetousness, malice</strong>. They are rife with <strong>envy, murder, strife, deceit, hostility</strong>. They are <strong>gossips, <sup>30</sup>slanderers, haters of God, insolent, arrogant, boastful, contrivers of all sorts of evil, disobedient to parents, <sup>31</sup>senseless, covenant-breakers, heartless, ruthless</strong>. <sup>32</sup>Although they fully know God's righteous decree that those who practice such things deserve to die, they not only do them but also approve of those who practice them.</i></span> (Romans 1:23-32—NET)
+<i>"<sup>23</sup>and exchanged the glory of the immortal God for an <strong>image</strong> resembling mortal human beings or birds or four-footed animals or reptiles. <sup>24</sup>Therefore God gave them over in the desires of their hearts to impurity, to <strong>dishonor their bodies</strong> among themselves. <sup>25</sup>They exchanged the truth of God for a lie and <strong>worshiped and served the creation</strong> rather than the Creator, who is blessed forever! Amen. <sup>26</sup>For this reason God gave them over to dishonorable passions. For their women exchanged the natural <strong>sexual relations</strong> for unnatural ones, <sup>27</sup>and likewise the men also <strong>abandoned natural relations</strong> with women and were inflamed in their passions for one another. <strong>Men committed shameless acts with men</strong> and received in themselves the due penalty for their error. <sup>28</sup>And just as they did not see fit to acknowledge God, God gave them over to a depraved mind, to do what should not be done. <sup>29</sup>They are filled with <strong>every kind of unrighteousness, wickedness, covetousness, malice</strong>. They are rife with <strong>envy, murder, strife, deceit, hostility</strong>. They are <strong>gossips, <sup>30</sup>slanderers, haters of God, insolent, arrogant, boastful, contrivers of all sorts of evil, disobedient to parents, <sup>31</sup>senseless, covenant-breakers, heartless, ruthless</strong>. <sup>32</sup>Although they fully know God's righteous decree that those who practice such things deserve to die, they not only do them but also approve of those who practice them.</i></span> (Romans 1:23-32—NET)
 
 When reading this passage, readers almost instantly assume that Paul is not speaking to the Christians who are listening to his message and who are seated in front of a podium that is broadcasting a message of condemnation to the unbelievers outside the church. that only unbelievers are subject to all of these sins. Nothing could be further from the truth.
 
