Last paragraph missing in Rom 1:17-32

--- a/_posts/bible-studies/Romans/2022-11-13-Romans-01-v17-32.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-01-v17-32.md
@@ -62,5 +62,6 @@ In a few weeks, when we come to chapter 3, we'll discuss this subject once more.
 
 > Therefore you are without excuse, <strong>whoever you are</strong>, when you judge someone else. For on whatever grounds you judge another, you condemn yourself, because <strong>you who judge practice the same things</strong>. (Romans 2:1)
 
+God's wrath is consequently directed at the entire human race, including you, who hold such high regard for yourself.
 
 {% include bible-study/bible-study-footer %}
