Missed Viet translation for teaser

--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-01-v17-32-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-01-v17-32-Viet.md
@@ -1,6 +1,6 @@
 ---
 title: "Rô-ma 1:17-32"
-excerpt: "Sống bởi đức tin. Condemnation of the unrighteous."
+excerpt: "Sống bởi đức tin. Cơn thạnh nộ của Đức Chúa Trời."
 image:
   teaser: Romans-teaser.jpg
 tags: [romans, bible-studies]
