--- a/_posts/bible-studies/2015-01-17-Romans.md
+++ b/_posts/bible-studies/2015-01-17-Romans.md
@@ -39,6 +39,10 @@ The key concepts gathered from the study of this passage: Living by faith. Conde
 
 The key concepts gathered from the study of this passage: You must also judge yourself. Hypocrisy. God’s kindness leads to repentance. The law 101.
 
+##  [<u>Romans 2:12-29</u>]({{ site.url }}{% post_url bible-studies/Romans/2022-11-13-Romans-02-v12-29 %})
+
+The key concepts gathered from the study of this passage: Gentile sinners. Don't just hear, do. A false sense of righteousness. Law 101.
+
 ## First writing of Romans study (2015)
 
 What Paul wrote in this book of Romans is frequently misunderstood, or regarded with suspicion, that it gives folks a license to sin. This is not what Romans 3:20 said. For all practical intents and purposes, it says you will not get any closer to God by doing good, or be driven further from God by doing bad, because the law is only meant to show how sinful you are. It's an x-ray into your heart to show its utter depravity. It does not heal you, or give you life.
