Fixed Romans teasers

--- a/_posts/bible-studies-Viet/Romans/2015-05-16-Ro-ma-Chuong-05.md
+++ b/_posts/bible-studies-Viet/Romans/2015-05-16-Ro-ma-Chuong-05.md
@@ -2,7 +2,7 @@
 title: "Rô-ma Chương 5"
 excerpt: "Faith: access to God's grace and peace. Rejoice in sufferings. God demonstrates His love for us. Reconciliation with God. Saved by Christ's life. Death spreads to all. The Gift by the Grace of God. The reigns of sin vs. grace."
 image: 
-  teaser: romans-chapter-teaser.png
+  teaser: Romans-teaser-Viet.png
 tags: [romans, bible-studies]
 featured: false
 modified:
@@ -26,7 +26,7 @@ comments_locked: false
 
 <div>
 <p>
-<img alt src="{{ site.url }}/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="{{ site.url }}/assets/images/Romans-teaser-Viet.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
 Vì mang bản chất tội lỗi của A-đam và Ê-va, mọi người điều mất đi sự công chính, do đó bị ngăn cách với Đức Chúa Trời, trở nên kẻ thù nghịch Ngài. Nhưng Đức Chúa Trời đã mở đường để loài người tìm lại được sự công chính mà nhờ đó được làm hòa với Đức Chúa Trời. Con đường cứu rỗi đó được mở ra khi Chúa Giê-su chịu đóng đinh trên thập giá, làm giá chuộc lại địa vị mà chúng ta đã đánh mất. Chúng ta đặt đức tin vào việc Chúa đã trả giá rất cao mà hòa thuận lại với Đức Chúa Trời. Chúng ta đứng vững trong ơn đó, là đứng vững trong đức tin nơi Chúa là Đấng Thành Tín chứ không phải nơi sức người có hạn. Nếu có điều chi chúng ta khoe mình, hoặc vui mừng, thì đó là sự trông cậy về sự sống đời đời, hơn là những trông cậy về phước hạnh đời này.
 </p>
 </div>
