--- a/_posts/bible-studies-Viet/Romans/2015-05-17-Ro-ma-Chuong-04.md
+++ b/_posts/bible-studies-Viet/Romans/2015-05-17-Ro-ma-Chuong-04.md
@@ -2,7 +2,7 @@
 title: "Rô-ma Chương 4"
 excerpt: "Boasting is the characteristic of those that rely on the law. Those that do not work, but believe in Christ is considered righteous. Rightousness is credited apart from works. God will never count the sins of those that believe ever again. Abraham was called righteous even before he was circumcised. Dead faith belongs to the one who relies on the law to get right with God. God's promise is only voided if you rely on the law to get right with Him. The law only brings wrath. In conclusion, righteousness is by grace through faith only."
 image: 
-  teaser: romans-chapter-teaser.png
+  teaser: Romans-teaser-Viet.png
 tags: [romans, bible-studies]
 featured: false
 modified:
@@ -26,7 +26,7 @@ Sự khoe mình là một đặc điểm của những người ỷ lại vào l
 
 <div>
 <p>
-<img alt src="{{ site.url }}/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="{{ site.url }}/assets/images/Romans-teaser-Viet.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
 Lại một lần nữa, Phao-lô liên hệ sự ỷ lại vào luật pháp với sự khoe mình. Điều này thực dễ hiểu, vì khi một người sống dưới sự đòi hỏi của luật pháp, thì phải luôn tìm cách chứng tỏ điều gì đó về mình, phải chu toàn trách nhiệm. Để đo lường mức độ của công việc mình, người ỷ lại vào luật pháp phải so sánh mình với người khác để xem mình đang ở đâu trong hàng ngũ. Sự bất an nẩy nở trong môi trường của luật pháp. Nơi đó có sự so sánh, sự khoe mình.
 </p>
 </div>
