--- a/_posts/bible-studies-Viet/Romans/2015-05-18-Ro-ma-Chuong-03.md
+++ b/_posts/bible-studies-Viet/Romans/2015-05-18-Ro-ma-Chuong-03.md
@@ -2,7 +2,7 @@
 title: "Rô-ma Chương 3"
 excerpt: "The Jews were entrusted with the oracles of God. God's righteousness abides even as those that call themselves by His name fail in every way. God's grace is unfathomable against the backdrop of man's wretchedness. All men are under condemnation. The law's purpose is to convict all men of sin. Preach grace and you'll be accused of promoting sins. No one can be justified by the works of the law. God's righteousness for all who believe. Justified freely. Since salvation is by grace and through faith, there can be no boasting. Preach faith and you will be accused of trying to nullify the law."
 image: 
-  teaser: romans-chapter-teaser.png
+  teaser: Romans-teaser-Viet.png
 tags: [romans, bible-studies]
 featured: false
 modified:
@@ -26,7 +26,7 @@ Người Do-thái được ban lời phán của Đức Chúa Trời. Chúa vẫ
 
 <div>
 <p>
-<img alt src="{{ site.url }}/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="{{ site.url }}/assets/images/Romans-teaser-Viet.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
 Ở phần cuối của chương 2, Phao-lô đã cho thấy người Do-thái thật thì không phải là người chỉ chịu cắt bì bên ngoài về phần thân xác, nhưng là người mà tấm lòng được cắt bì bời Thánh Linh (chỉ nhờ đức tin). Ngược lại, một người không phải Do-thái dù chẳng chịu cắt bì, nhưng làm trọn mọi điều trong luật pháp (nói như một giả thuyết, vì chẳng ai có thể làm được trọn mọi điều trong luật pháp), thì lại là người Do-thái chân chính. Điều này dẫn đến một câu hỏi: vậy thì người Do-thái được lợi về điểm nào? Thực có một lợi điểm, nếu họ nắm lấy điều ấy, là vì qua họ Đức Chúa Trời bày tỏ chương trình cứu rỗi, sự đến của Đấng Mê-si, qua các tiên tri.
 </p>
 </div>
