--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-01-v01-16-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-01-v01-16-Viet.md
@@ -2,13 +2,13 @@
 title: "Rô-ma 1:1-16"
 excerpt: "Phao-lô được gọi làm sứ đồ. Phúc âm Đức Chúa Trời đã hứa ban. Sự vâng phục của đức tin. Món nợ của Phao-lô. Không hổ thẹn về tin lành."
 image:
-  teaser: Colossians-teaser.jpg
-tags: [colossians, bible-studies]
+  teaser: Romans-teaser-Viet.png
+tags: [romans, bible-studies]
 featured: false
 modified:
 comments: true
 feature:
-  category: colossians
+  category: romans
 comments_locked: false
 ---
 
@@ -23,7 +23,7 @@ comments_locked: false
 ## PHAO-LÔ ĐƯỢC GỌI LÀM SỨ ĐỒ
 <div>
 <p>
-<img alt src="http://vacsf.org/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="http://vacsf.org/assets/images/Romans-teaser-Viet.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
     <span style="color: rgb(159, 29, 33);"><i>"<sup>1</sup>Phao-lô, <strong>tôi tớ</strong> Ðức Chúa Trời, <strong>được gọi làm sứ đồ</strong>, <u>để riêng ra đặng giảng Tin Lành Ðức Chúa Trời</u>."</i></span> (Romans 1:1)<br />Mặc dầu Phao-lô đã không phải là một trong mười hai sứ đồ đầu tiên, chính Chúa đã gọi ông vào chức vụ đó khi ông đang trên đường đến thành Đa-mách (Acts 9). Không những Ngài đã gọi ông làm sứ đồ, mà còn ban cho ông một trọng trách đặc biệt để rao truyền tin mừng cứu rỗi.
 </p>
 </div>
