--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-01-v17-32-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-01-v17-32-Viet.md
@@ -2,7 +2,7 @@
 title: "Rô-ma 1:17-32"
 excerpt: "Sống bởi đức tin. Cơn thạnh nộ của Đức Chúa Trời."
 image:
-  teaser: Romans-teaser.jpg
+  teaser: Romans-teaser-Viet.png
 tags: [romans, bible-studies]
 featured: false
 modified:
@@ -23,7 +23,7 @@ comments_locked: false
 ## SỐNG BỞI ĐỨC TIN
 <div>
 <p>
-<img alt src="{{ site.url }}/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="{{ site.url }}/assets/images/Romans-teaser-Viet.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
     <span style="color: rgb(159, 29, 33);"><i><sup>17</sup>vì trong Tin Lành nầy có bày tỏ sự công bình của Ðức Chúa Trời, bởi đức tin mà được, <strong>lại dẫn đến đức tin nữa</strong>, như có chép rằng: <strong>Người công bình sẽ sống bởi đức tin</strong>."</i></span> (Romans 1:17)<br />Chúng ta hãy dành chút thì giờ ôn lại cách nào một người được xưng công bình–bởi đức tin–trước khi chúng ta thảo luận về ý nghĩa của sự "<i>sống bởi đức tin</i>." Trong chương 3 mà chúng ta sẽ học trong thời gian sắp tới thì điều này được bày tỏ rõ ràng: <i>"Vì chúng ta kể rằng người ta được xưng công bình bởi đức tin, chớ không bởi việc làm theo luật pháp. (Romans 3:28)."</i>
 </p>
 </div>
