--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-02-v1-11-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-02-v1-11-Viet.md
@@ -2,7 +2,7 @@
 title: "Rô-ma 2:1-11"
 excerpt: "Tự xét mình. Đạo đức giả. Lòng nhân từ Chúa và sự ăn năn. Luật pháp vỡ lòng."
 image:
-  teaser: Romans-teaser.jpg
+  teaser: Romans-teaser-Viet.png
 tags: [romans, bible-studies]
 featured: false
 modified:
@@ -24,7 +24,7 @@ comments_locked: false
 
 <div>
 <p>
-<img alt src="http://vacsf.org/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="http://vacsf.org/assets/images/Romans-teaser-Viet.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
     <span style="color: rgb(159, 29, 33);"><i><sup>1</sup>Vậy hỡi người kia, ngươi là ai mặc lòng, hễ đoán xét kẻ khác thì không thể chữa mình được; vì trong khi đoán xét họ, ngươi cũng <strong>lên án cho chính mình</strong> ngươi nữa, bởi ngươi đoán xét họ, mà <strong>cũng làm các việc như họ</strong>. <sup>2</sup>Vả, Chúng ta biết rằng sự phán xét của Ðức Chúa Trời đối với kẻ làm những việc như thế, là hiệp với lẽ thật (Romans 2:1—2)."</i></span>
 </p>
 </div>
