--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-02-v12-29-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-02-v12-29-Viet.md
@@ -2,7 +2,7 @@
 title: "Rô-ma 2:12-29"
 excerpt: "Người ngoại. Đừng chỉ nghe, hãy làm. Tưởng mình được trọn vẹn. Luật pháp vỡ lòng."
 image:
-  teaser: Romans-teaser.jpg
+  teaser: Romans-teaser-Viet.png
 tags: [romans, bible-studies]
 featured: false
 modified:
@@ -24,7 +24,7 @@ comments_locked: false
 
 <div>
 <p>
-<img alt src="http://vacsf.org/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="http://vacsf.org/assets/images/Romans-teaser-Viet.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
     <span style="color: rgb(159, 29, 33);"><i>"<sup>12</sup>Phàm những kẻ <strong>không luật pháp mà phạm tội</strong>, cũng sẽ không luật pháp mà hư mất; còn những kẻ có luật pháp mà phạm tội, thì sẽ bị luật pháp đoán xét; (Romans 2:12)."</i></span><br />
     Trong khi người Do-thái thì có Mười Điều Răn và các luật của Môi-se, người không phải Do-thái còn có luật pháp cổ xưa hơn nữa từ khi họ nhận biết thiện ác từ trong Vườn Địa Đàng. Nhưng bất kể là luật nào, cả hai đều mang lại sự chết cho họ."
 </p>
