--- a/_posts/bible-studies/Romans/2022-11-13-Romans-01-v01-16.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-01-v01-16.md
@@ -2,7 +2,7 @@
 title: "Romans 1:1-16"
 excerpt: "Paul was called to be an apostle. The promised gospel. The obedience of faith. Paul's debt. Not ashamed of the gospel."
 image:
-  teaser: Romans-teaser.jpg
+  teaser: Romans-teaser.png
 tags: [romans, bible-studies]
 featured: false
 modified:
@@ -25,7 +25,7 @@ comments_locked: false
 ## PAUL WAS CALLED TO BE AN APOSTLE
 <div>
 <p>
-<img alt src="http://vacsf.org/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="http://vacsf.org/assets/images/Romans-teaser.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
 <span style="color: rgb(159, 29, 33);"><i>"<sup>1</sup>From Paul, a <strong>slave</strong> of Christ Jesus, <strong>called to be an apostle</strong>, <u>set apart for the gospel of God</u>."</i></span> (Romans 1:1—NET)<br />Despite the fact that Paul wasn't one of the original twelve apostles, God himself did call him to be one when he was on the road to Damascus (Acts 9). Not only did God call him to be an apostle, he gave Paul a special voice in proclaiming the gospel of God.
 </p>
 </div>
