--- a/_posts/bible-studies/Romans/2022-11-13-Romans-01-v17-32.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-01-v17-32.md
@@ -2,7 +2,7 @@
 title: "Romans 1:17-32"
 excerpt: "Living by faith. Condemnation of the unrighteous."
 image:
-  teaser: Romans-teaser.jpg
+  teaser: Romans-teaser.png
 tags: [romans, bible-studies]
 featured: false
 modified:
@@ -25,7 +25,7 @@ comments_locked: false
 ## LIVING BY FAITH
 <div>
 <p>
-<img alt src="{{ site.url }}/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="{{ site.url }}/assets/images/Romans-teaser.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
 <span style="color: rgb(159, 29, 33);"><i><sup>17</sup>For the righteousness of God is revealed in the gospel <strong>from faith to faith</strong>, just as it is written, "<strong>The righteous by faith will live</strong>."</i></span> (Romans 1:17—NET)<br />Let's take a moment to remember how someone becomes righteous in the first place—by faith—before we discuss what it means to ""<i>live by faith</i>." In chapter 3, which we will examine later, this is stated explicitly: <i>"For we consider that a person is declared righteous by faith apart from the works of the law (Romans 3:28—NET)."</i>
 </p>
 </div>
