--- a/_posts/bible-studies/Romans/2022-11-13-Romans-02-v1-11.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-02-v1-11.md
@@ -2,7 +2,7 @@
 title: "Romans 2:1-11"
 excerpt: "You must also judge yourself. Hypocrisy. God's kindness leads to repentance. The law 101."
 image:
-  teaser: Romans-teaser.jpg
+  teaser: Romans-teaser.png
 tags: [romans, bible-studies]
 featured: false
 modified:
@@ -25,7 +25,7 @@ comments_locked: false
 ## YOU MUST ALSO JUDGE YOURSELF
 <div>
 <p>
-<img alt src="http://vacsf.org/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="http://vacsf.org/assets/images/Romans-teaser.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
 <span style="color: rgb(159, 29, 33);"><i><sup>1</sup>Therefore you are without excuse,whoever you are, when you judge someone else. For on whatever
 grounds you judge another, <strong>you condemn yourself, because you who judge practice the same things</strong>. <sup>2</sup>Now we know that God’s judgment is in accordance with truth against those who practice such things (Romans 2:1—2)."</i></span>
 </p>
