--- a/_posts/bible-studies/Romans/2022-11-13-Romans-02-v12-29.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-02-v12-29.md
@@ -2,7 +2,7 @@
 title: "Romans 2:12-29"
 excerpt: "Gentile sinners. Don't just hear, do. A false sense of righteousness. Law 101."
 image:
-  teaser: Romans-teaser.jpg
+  teaser: Romans-teaser.png
 tags: [romans, bible-studies]
 featured: false
 modified:
@@ -25,7 +25,7 @@ comments_locked: false
 ## GENTILE SINNERS
 <div>
 <p>
-<img alt src="http://vacsf.org/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="http://vacsf.org/assets/images/Romans-teaser.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
 <span style="color: rgb(159, 29, 33);"><i>"<sup>12</sup>For all who have sinned <strong>apart from the law</strong> will also perish apart from the law, and all who have sinned under the law will be judged by the law (Romans 2:12)."</i></span><br />
     While the Jews have the Ten Commandments and Moses' Law, the Gentiles have an even older law that was given to them when they attained the ability to distinguish between good and evil in the Garden of Eden. But both laws will sentence them to death.
 </p>
