--- a/_posts/bible-studies-Viet/Romans/2015-05-11-Ro-ma-Chuong-10.md
+++ b/_posts/bible-studies-Viet/Romans/2015-05-11-Ro-ma-Chuong-10.md
@@ -2,7 +2,7 @@
 title: "Rô-ma Chương 10"
 excerpt: "Do not seek own righteousness. Seeking righteousness through the law is a vain pursuit. Righteousness through Christ is very near. The good news, preaching, and belief. The forgotten gospel."
 image: 
-  teaser: romans-chapter-teaser.png
+  teaser: Romans-teaser-Viet.png
 tags: [romans, bible-studies]
 featured: false
 modified:
@@ -24,7 +24,7 @@ comments_locked: false
 
 <div>
 <p>
-<img alt src="{{ site.url }}/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="{{ site.url }}/assets/images/Romans-teaser-Viet.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
 <!-- First paragraph goes here -->
 Phao-lô khởi đầu chương này với cùng một tình cảm như trong chương 9 về lòng khát khao của ông để được thấy dân sự Chúa nhận và hiểu ý nghĩa sự cứu rỗi mà ông đang tìm cách truyền đạt cho họ. Ông nhận thức rằng quả thực họ có lòng sốt sắng về Chúa, nhưng dường như chỉ là mê tín, thay vì dựa trên sự hiểu biết, với sự suy gẫm sâu xa về ý nghĩa và thực chất của điều họ đang làm trong mối liên hệ với Chúa.
 </p>
