--- a/_posts/bible-studies-Viet/Romans/2015-05-14-Ro-ma-Chuong-07.md
+++ b/_posts/bible-studies-Viet/Romans/2015-05-14-Ro-ma-Chuong-07.md
@@ -2,7 +2,7 @@
 title: "Rô-ma Chương 7"
 excerpt: "The master/slave relationship with the law. Released from one to marry another. To bear fruit to God: die to the law. Law/death vs. Spirit/life. The law reveals sin. The commandment brought death, not life. Men's utter helplessness. We need WHO, not HOW."
 image: 
-  teaser: romans-chapter-teaser.png
+  teaser: Romans-teaser-Viet.png
 tags: [romans, bible-studies]
 featured: false
 modified:
@@ -26,7 +26,7 @@ Mối liên hệ chủ/nô với luật pháp. Được buông tha để kết h
 
 <div>
 <p>
-<img alt src="{{ site.url }}/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="{{ site.url }}/assets/images/Romans-teaser-Viet.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
 Trong Romans 6:14, Phao-lô khẳng định rằng chúng ta không còn ở dưới sự cai trị của luật pháp nữa, nhưng ở dưới ân điển, và ở đây trong chương 7, ông bắt đầu cho người đọc thấy giới hạn của luật pháp trong đời sống một người: ngày nào họ còn sống, thì còn dưới sự cai trị đó (các bản tiếng Anh dùng từ <span style="font-style: italic;">"as long as"</span>). Cũng có nghĩa là, nếu người đó chết đi thì luật pháp sẽ không còn hiệu lực nữa.
 </p>
 </div>
