--- a/_posts/bible-studies-Viet/Romans/2015-05-19-Ro-ma-Chuong-02.md
+++ b/_posts/bible-studies-Viet/Romans/2015-05-19-Ro-ma-Chuong-02.md
@@ -2,7 +2,7 @@
 title: "Rô-ma Chương 2"
 excerpt: "All men are under judgement. Lawkeepers are judgemental, and they will be judged by the very law they uphold. God's kindness that leads you to repentance. Unrepentance = not submitting to salvation through Christ. All will be judged according to the law or to grace. All Gentiles who live under the moral law in their hearts are condemned. All Jews under Mosaic Law are condemned."
 image: 
-  teaser: romans-chapter-teaser.png
+  teaser: Romans-teaser-Viet.png
 tags: [romans, bible-studies]
 featured: false
 modified:
@@ -24,7 +24,7 @@ Cả nhân loại ở dưới sự đoán xét. Những kẻ cậy luật pháp 
 
 <div>
 <p>
-<img alt src="{{ site.url }}/assets/images/no-condemnation.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="{{ site.url }}/assets/images/Romans-teaser-Viet.png" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
 Phao-lô đang viết về những hạng người gì đây? Bất kể họ là ai, Phao-lô nói họ sẽ bị đoán xét theo cùng tiêu chuẩn mà họ dùng để đoán xét người khác; mà chính họ lại vấp phạm những điều họ dạy dỗ người khác. Đây là sự lên án bao trùm tất cả nhân loại, chẳng ngoại trừ ai.
 </p>
 </div>
