Add 1 paragraph to Don't just hear. Do

--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-02-v12-29-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-02-v12-29-Viet.md
@@ -39,6 +39,8 @@ Những người sống dưới sự hướng dẫn của giáo luật thì thư
 
 Phải chăng Phao-lô đang cổ động sự làm theo những giáo luật trong nếp sống người tin Chúa? Không, ông chỉ đang chứng minh cho họ thấy rằng bất kể Do-thái hay người ngoại, không ai có thể giữ trọn lời Chúa, và vì thể họ không thể nào đạt được sự công bình. Phao-lô đang sử dụng tiêu chuẩn tối cao của luật pháp để dồn người ta đến chỗ nhận thức được rằng sự công bình chỉ có thể đến được qua Đấng Christ, như chúng ta sẽ học trong những chương sắp đến.
 
+Câu 16 nói về ngày Chúa Giê-su trở lại phán xét thế gian, ***"trong ngày Ðức Chúa Trời bởi Ðức Chúa Jêsus Christ mà xét đoán"*** Nhưng nếu chúng ta ghé đọc trước Romans 8:1 thì sẽ thấy sự xét đoán này chỉ dành cho những kẻ không đặt niềm tin nơi Đấng Christ.
+
 ## ẢO TƯỞNG VỀ SỰ CÔNG BÌNH
 
 <span style="color: rgb(159, 29, 33);">
