--- a/_posts/bible-studies/Romans/2022-11-13-Romans-02-v12-29.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-02-v12-29.md
@@ -40,6 +40,8 @@ Those who uphold the law are susceptible to the psychological fallacy that simpl
 
 Does Paul advocate following the law as a way of life for Christians? No, he is merely demonstrating to the people that neither Jews nor Gentiles can fully uphold the Scriptures, making it impossible for them to claim righteousness. Paul is utilizing the greatest standard of the law to force people to realize that righteousness can only come through Christ, as we will show in arguments in later chapters.
 
+Verse 16 relates to the day when Christ returns to judge the world, ***"on the day when God will judge the secrets of human hearts."*** However, if we quickly jump to Romans 8:1, we would see that this judgment is only reserved for those who would be discovered to be without faith in Christ.
+
 ## A FALSE SENSE OF RIGHTEOUSNESS
 
 <span style="color: rgb(159, 29, 33);">
