--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-02-v12-29-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-02-v12-29-Viet.md
@@ -69,7 +69,7 @@ Những lãnh đạo hội thánh ở Rô-ma tin rằng Chúa ở cùng phe vớ
 <span style="color: rgb(159, 29, 33);">
 <i>"<sup>25</sup>Thật thế, nếu ngươi làm theo luật pháp, thì phép cắt bì có ích; còn <strong>nếu ngươi phạm luật pháp</strong>, thì dầu chịu cắt bì cũng như không. <sup>26</sup>Vậy <strong>nếu kẻ chưa chịu cắt bì giữ các điều răn của luật pháp</strong> thì sự chưa chịu cắt bì đó há chẳng cầm như đã chịu sao? <sup>27</sup>Kẻ vốn không chịu cắt bì, mà làm trọn luật pháp sẽ đoán xét ngươi, là kẻ dẫu có chữ của luật pháp và phép cắt bì, lại phạm luật pháp. <sup>28</sup>Vì người nào chỉ bề ngoài là người Giu-đa, thì không phải là người Giu-đa, còn phép cắt bì làm về xác thịt ở ngoài, thì không phải là phép cắt bì; <sup>29</sup>nhưng bề trong là người Giu-đa mới là người Giu-đa,  <strong>phép cắt bì bởi trong lòng, làm theo cách thiêng liêng, không theo chữ nghĩa, mới là phép cắt bì thật</strong>. Một người Giu-đa như vậy được  <strong>khen ngợi</strong>, chẳng phải bởi loài người, bèn là bởi Ðức Chúa Trời."</i></span> (Romans 2:25-29)
 
-Phép cắt bì trên thân thể chỉ là hình bóng của phép cắt bì thật bởi sự cắt bỏ xác thịt bởi sự chết của Chúa Giê-su trên thập giá, cũng giống như các dấu hiệu khác trong Cựu Ước là hình bóng của sự thực hữu sẽ đến trong Tân Ước. Cho dù một người có giữ trọn được luật pháp, thì họ chỉ đạt được sự chấp nhận trên hình thức về mối liên hệ với Chúa. Nhưng trên thực tế, vì mọi người đều không làm trọn được luật pháp, nên cuối cùng họ ***"dầu chịu cắt bì cũng như không"***. 
+Phép cắt bì trên thân thể chỉ là hình bóng của phép cắt bì thật bởi sự lấy đi bản chất tội lỗi (là điều sẽ chỉ thực sự xảy đến khi Chúa Giê-su trở lại để ban chúng ta thân thể bất tử) bởi sự chết của Chúa Giê-su trên thập giá, cũng giống như các dấu hiệu khác trong Cựu Ước là hình bóng của sự thực hữu sẽ đến trong Tân Ước. Cho dù một người có giữ trọn được luật pháp, thì họ chỉ đạt được sự chấp nhận trên hình thức về mối liên hệ với Chúa. Nhưng trên thực tế, vì mọi người đều không làm trọn được luật pháp, nên cuối cùng họ ***"dầu chịu cắt bì cũng như không"***. 
 
 Mặc dầu Phao-lô dùng luận lý ***"nếu kẻ chưa chịu cắt bì giữ các điều răn của luật pháp"*** để bày tỏ điều mình muốn nói, trên thực tế, không ai có thể giữ trọn được luật pháp vì bản chất tội lỗi của họ. Vì thế, bất kể Do-thái hay không Do-thái, mọi người đều là những tội nhân bị nguyền rủa cho đến khi họ được xưng công bình bởi đức tin nơi Đấng Christ.
 
