--- a/_posts/bible-studies/Romans/2022-11-13-Romans-02-v12-29.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-02-v12-29.md
@@ -68,7 +68,7 @@ The law-keeping church leaders at the Romans church believe they are on God's go
 <span style="color: rgb(159, 29, 33);">
 <i>"<sup>25</sup>For circumcision has its value if you practice the law, but <strong>if you break the law</strong>, your circumcision has become uncircumcision. <sup>26</sup>Therefore <strong>if the uncircumcised man obeys the righteous requirements of the law</strong>, will not his uncircumcision be regarded as circumcision? <sup>27</sup>And will not the physically uncircumcised man who keeps the law judge you who, despite the written code and circumcision, transgress the law? <sup>28</sup>For a person is not a Jew who is one outwardly, nor is circumcision something that is outward in the flesh, <sup>29</sup>but someone is a Jew who is one inwardly, and <strong>circumcision is of the heart by the Spirit and not by the written code</strong>. This person's <strong>praise</strong> is not from people but from God."</i></span> (Romans 2:25-29)
 
-The circumcision of the flesh simply serves as a pointer to the true circumcision of the removal of the fleshly body by Christ's death on the cross, like many other symbols of the Old Covenant that are shadows of the real things to come under the New Covenant. Even if someone follows the law in its entirety, all they accomplish is the superficial affirmation of their earthly status in their relationship with God. The truth is that everyone's ***"circumcision has become uncircumcision"*** because they all breach the law.
+The circumcision of the flesh simply serves as a pointer to the true circumcision of the removal of the sin nature (which won't actually take place until Christ's second coming to give us immortality) by Christ's death on the cross, like many other symbols of the Old Covenant that are shadows of the real things to come under the New Covenant. Even if someone follows the law in its entirety, all they accomplish is the superficial affirmation of their earthly status in their relationship with God. The truth is that everyone's ***"circumcision has become uncircumcision"*** because they all breach the law.
 
 Though Paul uses the argument ***"if the uncircumcised man obeys the righteous requirements of the law"*** to illustrate his point, in reality, <u>no one</u> can obey the righteous requirements of the law because of their sin nature. Therefore, whether a Jew or a non-Jew, everyone is a condemned sinner until they are justified by faith in Christ.
 
