--- a/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
+++ b/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
@@ -40,6 +40,10 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Tự
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Người ngoại. Đừng chỉ nghe, hãy làm. Tưởng mình được trọn vẹn. Luật pháp vỡ lòng.
 
+##  [<u>Rô-ma 3:1-9</u>]({{ site.url }}{% post_url bible-studies-Viet/Romans/2022-11-13-Romans-03-v01-09-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Phúc âm được ban qua Y-sơ-ra-ên. Tôi nói như cách người ta nói. Thảy đều phục dưới quyền tội lỗi.
+
 
 ## Lần viết đầu tiên - 2015
 
