--- a/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
+++ b/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
@@ -44,6 +44,10 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Ngư
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Phúc âm được ban qua Y-sơ-ra-ên. Tôi nói như cách người ta nói. Thảy đều phục dưới quyền tội lỗi.
 
+##  [<u>Rô-ma 3:10-31</u>]({{ site.url }}{% post_url bible-studies-Viet/Romans/2022-11-13-Romans-03-v10-31-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Chẳng một ai công binh. Miệng nào cũng phải ngậm lại. Được xưng công bình cách nhưng không. Vậy thì sự khoe mình ở đâu? Làm vững bền luật pháp.
+
 
 ## Lần viết đầu tiên - 2015
 
