--- a/_posts/bible-studies/Romans/2022-11-13-Romans-03-v10-31.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-03-v10-31.md
@@ -40,7 +40,7 @@ Why is it the case? ***"There is no one righteous, not even one,"*** it says in 
 <span style="color: rgb(159, 29, 33);">
 <i>"<sup>19</sup>Now we know that <strong>whatever the law says</strong>, it says to those who are under the law, so that <strong>every mouth may be silenced</strong> and <strong>the whole world may be held accountable to God</strong>. <sup>20</sup>For <strong>no one is declared righteous before him by the works of the law</strong>, for through the law comes the <strong>knowledge of sin</strong>."</i></span> (Romans 3:19-20)
 
-The widely held belief on the function of the law is that it improves people. You eventually grow more sanctified because it helps you distinguish between good and evil. But most also fundamentally misunderstands the function of the law. It's not meant to help you accomplish any of the aforementioned goals; rather, it's meant to highlight your sinfulness and how short of God's glory you truly are.
+The widely held belief on the function of the law is that it improves people. You eventually grow more sanctified because it helps you distinguish between good and evil. But this is a misunderstanding of the function of the law. It's not meant to help you accomplish any of the aforementioned goals; rather, it's meant to highlight your sinfulness and how short of God's glory you truly are.
 
 If the law is successful in accomplishing its purpose in your life, it acts as a mirror that shows who you really are: ***"because through the law comes the knowledge of sin."*** Since the Garden of Eden and the Ten Commandments, such has been the aim of the law. Every one of us has been guilty of misusing the law.
 
