--- a/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
+++ b/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
@@ -48,6 +48,10 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Phú
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Chẳng một ai công binh. Miệng nào cũng phải ngậm lại. Được xưng công bình cách nhưng không. Vậy thì sự khoe mình ở đâu? Làm vững bền luật pháp.
 
+##  [<u>Rô-ma 4:1-5</u>]({{ site.url }}{% post_url bible-studies-Viet/Romans/2022-11-13-Romans-04-v01-05-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Theo xác thịt. Việc làm và sự khoe mình. Chỉ tin là đủ. Ơn và việc làm.
+
 
 ## Lần viết đầu tiên - 2015
 
