--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-03-v10-31-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-03-v10-31-Viet.md
@@ -48,7 +48,7 @@ Chân lý này sẽ đập tan mọi nỗ lực tự bênh vực cho sự công 
 ## ĐƯỢC XƯNG CÔNG BÌNH CÁCH NHƯNG KHÔNG
 
 <span style="color: rgb(159, 29, 33);">
-<i>"<sup>21</sup>Nhưng hiện bây giờ, sự công bình của Ðức Chúa Trời, mà luật pháp và các đấng tiên tri đều làm chứng cho, <strong>đã bày tỏ ra ngoài luật pháp</strong>; <sup>22</sup>tức là <strong>sự công bình của Ðức Chúa Trời, bởi sự tin đến Ðức Chúa Jêsus Christ, cho mọi người nào tin</strong>, chẳng có phân biệt chi hết, <sup>23</sup>vì mọi người đều đã phạm tội, thiếu mất sự vinh hiển của Ðức Chúa Trời, <sup>24</sup>và họ nhờ ân điển Ngài mà được <strong>xưng công bình nhưng không</strong>, bởi <strong>sự chuộc tội đã làm trọn trong Ðức Chúa Jêsus Christ</strong>, <sup>25</sup>là Ðấng Ðức Chúa Trời đã lập làm của lễ chuộc tội, bởi đức tin trong huyết Ðấng ấy. Ngài đã bày tỏ sự công bình mình như vậy, vì đã bỏ qua các tội phạm trước kia, <sup>26</sup>trong buổi Ngài nhịn nhục; tức là Ngài đã tỏ ra sự công bình Ngài trong thời hiện tại, <strong>tỏ ra mình là công bình và xưng công bình kẻ nào tin đến Ðức Chúa Jêsus</strong>."</i></span> (Romans 2:21-26)
+<i>"<sup>21</sup>Nhưng hiện bây giờ, sự công bình của Ðức Chúa Trời, mà luật pháp và các đấng tiên tri đều làm chứng cho, <strong>đã bày tỏ ra ngoài luật pháp</strong>; <sup>22</sup>tức là <strong>sự công bình của Ðức Chúa Trời, bởi sự tin đến Ðức Chúa Jêsus Christ, cho mọi người nào tin</strong>, chẳng có phân biệt chi hết, <sup>23</sup>vì mọi người đều đã phạm tội, thiếu mất sự vinh hiển của Ðức Chúa Trời, <sup>24</sup>và họ nhờ ân điển Ngài mà được <strong>xưng công bình nhưng không</strong>, bởi <strong>sự chuộc tội đã làm trọn trong Ðức Chúa Jêsus Christ</strong>, <sup>25</sup>là Ðấng Ðức Chúa Trời đã lập làm của lễ chuộc tội, bởi đức tin trong huyết Ðấng ấy. Ngài đã bày tỏ sự công bình mình như vậy, vì đã bỏ qua các tội phạm trước kia, <sup>26</sup>trong buổi Ngài nhịn nhục; tức là Ngài đã tỏ ra sự công bình Ngài trong thời hiện tại, <strong>tỏ ra mình là công bình và xưng công bình kẻ nào tin đến Ðức Chúa Jêsus</strong>."</i></span> (Romans 3:21-26)
 
 Sự công bình nghĩa là sự một người được đối tượng của mình chấp nhận. Đối với người tin Chúa, nó nói về sự được Chúa chấp nhận. Tuy nhiên, Philippians 3:9 nói về hai loại công bình khác nhau: sự công bình của chính mình đến bởi sự tuân theo những đòi hỏi của luật pháp, và sự công bình của Đức Chúa Trời được ban cho những kẻ tin vào Đấng Christ. Người tin Chúa phải tìm kiếm sự công bình của Đức Chúa Trời vì đó là sự công bình duy nhất để được sự sống đời đời.
 
@@ -83,7 +83,7 @@ Tại sao chúng ta không được khoe mình? Tại vì sự công bình mà C
 ## LÀM VỮNG BỀN LUẬT PHÁP
 
 <span style="color: rgb(159, 29, 33);">
-<i>"<sup>31</sup>Vậy, chúng ta <strong>nhơn đức tin mà bỏ luật pháp hay sao</strong>? Chẳng hề như vậy! Trái lại, <strong>chúng ta làm vững bền luật pháp</strong>."</i></span> (Romans 3:27-30)
+<i>"<sup>31</sup>Vậy, chúng ta <strong>nhơn đức tin mà bỏ luật pháp hay sao</strong>? Chẳng hề như vậy! Trái lại, <strong>chúng ta làm vững bền luật pháp</strong>."</i></span> (Romans 3:31)
 
 Phao-lô chắc thế nào cũng bị người ta lên án rằng ông chối bỏ luật pháp chỉ vì ông giảng quá nhiều về đức tin. Vì những người lên án ông hiểu sai về vai trò của luật pháp. Họ tin rằng làm vững bền luật pháp tức là giữ mọi điều răn. Tuy nhiên, như chúng ta đã học trong câu 20, mục đích của luật pháp là để phơi bày tình trạng hư hoại cùng cực của những người bước theo nó. Nếu bạn là người cảm thấy tự mãn và hãnh diện về chính mình khi bước đi theo luật pháp, thì bạn chính là người phá bỏ luật pháp, vì mục đích của nó là để phơi bày tội lỗi. Nhưng nếu khi đối diện với luật pháp mà khiến chúng ta phải giơ tay đầu phục và thốt lên, *"Khốn nạn cho tôi! Xong đời tôi rồi!,"* (Isaiah 6:5), thì chúng ta mới là những người làm vững bền luật pháp.
 
