--- a/_posts/bible-studies/Romans/2022-11-13-Romans-03-v10-31.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-03-v10-31.md
@@ -49,7 +49,7 @@ This should put an end to any attempts to justify oneself using the law: ***"eve
 ## JUSTIFIED FREELY APART FROM THE LAW
 
 <span style="color: rgb(159, 29, 33);">
-<i>"<sup>21</sup>But now <strong>apart from the law</strong> the righteousness of God (which is attested by the law and the prophets) has been disclosed - <sup>22</sup>namely, the <strong>righteousness of God through the faithfulness of Jesus Christ for all who believe</strong>. For there is no distinction, <sup>23</sup>for all have sinned and fall short of the glory of God. <sup>24</sup>But they are <strong>justified freely</strong> by his grace through the <strong>redemption that is in Christ Jesus</strong>. <sup>25</sup>God publicly displayed him at his death as the mercy seat accessible through faith. This was to demonstrate his righteousness, because God in his forbearance had passed over the sins previously committed. <sup>26</sup>This was also to demonstrate his righteousness in the present time, so that <strong>he would be just and the justifier</strong> of the one who lives <strong>because of Jesus' faithfulness</strong>."</i></span> (Romans 2:21-26)
+<i>"<sup>21</sup>But now <strong>apart from the law</strong> the righteousness of God (which is attested by the law and the prophets) has been disclosed - <sup>22</sup>namely, the <strong>righteousness of God through the faithfulness of Jesus Christ for all who believe</strong>. For there is no distinction, <sup>23</sup>for all have sinned and fall short of the glory of God. <sup>24</sup>But they are <strong>justified freely</strong> by his grace through the <strong>redemption that is in Christ Jesus</strong>. <sup>25</sup>God publicly displayed him at his death as the mercy seat accessible through faith. This was to demonstrate his righteousness, because God in his forbearance had passed over the sins previously committed. <sup>26</sup>This was also to demonstrate his righteousness in the present time, so that <strong>he would be just and the justifier</strong> of the one who lives <strong>because of Jesus' faithfulness</strong>."</i></span> (Romans 3:21-26)
 
 The degree of acceptability to a certain audience is what is meant by righteousness. For a Christian, it refers to acceptance by God. However, Philippians 3:9 states that there are two different types of righteousness: my own self-righteousness, which results from upholding the law, and the righteousness of God, which is made available to us through faith in Christ. A Christian should pursue God's righteousness because it is the only righteousness that has eternal significance.
 
@@ -84,7 +84,7 @@ Why is bragging not permitted? This is the case because God grants you righteous
 ## WE UPHOLD THE LAW
 
 <span style="color: rgb(159, 29, 33);">
-<i>"<sup>31</sup>Do we then <strong>nullify the law through faith?</strong> Absolutely not! Instead <strong>we uphold the law</strong>."</i></span> (Romans 3:27-30)
+<i>"<sup>31</sup>Do we then <strong>nullify the law through faith?</strong> Absolutely not! Instead <strong>we uphold the law</strong>."</i></span> (Romans 3:31)
 
 Paul can be accused of negating the law because of how much he teaches about faith. These same folks are misinformed about the function of the law. They believe that upholding the law entails keeping all the commandments. However, as we previously learned in verse 20, the purpose of the law is to expose the absolute depravity of those who follow it. When you feel sanctified and proud of yourself for upholding the law, you are the one who breaks it, because it's purpose is to reveal sins (Romans 3:20). However, when the law looks us in the eye and we raise our hands in surrender and cry, *"Woe is me, for I am undone,"* (Isaiah 6:5), we are the ones who uphold the law.
 
