--- a/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
+++ b/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
@@ -56,6 +56,10 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Theo
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Xưng người có tội là công bình. Phước thay. Trước khi Áp-ra-ham chịu cắt bì. Cha hết thảy những kẻ tin.
 
+##  [<u>Rô-ma 4:14-15</u>]({{ site.url }}{% post_url bible-studies-Viet/Romans/2022-11-13-Romans-04-v14-15-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Luật pháp, đức tin, và lời hứa. Luật pháp, sự giận, và sự phạm luật pháp.
+
 
 ## Lần viết đầu tiên - 2015
 
