--- a/_posts/bible-studies/Romans/2022-11-13-Romans-04-v05-13.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-04-v05-13.md
@@ -68,7 +68,7 @@ So, if you come to God through faith in Christ, as Abraham did, he is your fathe
 
 Don't underestimate the law's power and allure. It tempted Adam and Eve, causing them to lose their eternal life. The law, in contrast to the fruit of the spirit, only brings death, as we will see in Chapter 7.
 
-> <sup>5</sup>For when we were in the flesh, the sinful desires, aroused by the law, were active in the members of our body to bear fruit for death. <sup>6</sup>But now we have been released from the law, because we have died to what controlled us, so that we may serve in the new life of the Spirit and not under the old written code. (Romans 7:5)
+> <sup>5</sup>For when we were in the flesh, the <strong>sinful desires, aroused by the law</strong>, were active in the members of our body to bear fruit for death. <sup>6</sup>But now <strong>we have been released from the law</strong>, because we have died to what controlled us, <strong>so that we may serve in the new life of the Spirit</strong> and not under the old written code. (Romans 7:5)
 
 
 {% include bible-study/bible-study-footer %}
