--- a/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
+++ b/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
@@ -60,6 +60,10 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Xưn
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Luật pháp, đức tin, và lời hứa. Luật pháp, sự giận, và sự phạm luật pháp.
 
+##  [<u>Rô-ma 4:16-18</u>]({{ site.url }}{% post_url bible-studies-Viet/Romans/2022-11-13-Romans-04-v16-18-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Sự chắc chắn của lời hứa. Ban sự sống cho kẻ chết. Đức tin của Áp-ra-ham.
+
 
 ## Lần viết đầu tiên - 2015
 
