--- a/_posts/bible-studies/2015-01-17-Romans.md
+++ b/_posts/bible-studies/2015-01-17-Romans.md
@@ -63,6 +63,10 @@ The key concepts gathered from the study of this passage: Declaring the ungodly 
 
 The key concepts gathered from the study of this passage: Law, faith, and promise. Law, wrath, and transgression.
 
+##  [<u>Romans 4:16-18</u>]({{ site.url }}{% post_url bible-studies/Romans/2022-11-13-Romans-04-v16-18 %})
+
+The key concepts gathered from the study of this passage: Certainty of the promise. To make the dead alive. Abraham’s faith.
+
 ## First writing of Romans study (2015)
 
 What Paul wrote in this book of Romans is frequently misunderstood, or regarded with suspicion, that it gives folks a license to sin. This is not what Romans 3:20 said. For all practical intents and purposes, it says you will not get any closer to God by doing good, or be driven further from God by doing bad, because the law is only meant to show how sinful you are. It's an x-ray into your heart to show its utter depravity. It does not heal you, or give you life.
