--- a/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
+++ b/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
@@ -66,7 +66,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Sự
 
 ##  [<u>Rô-ma 4:19-24</u>]({{ site.url }}{% post_url bible-studies-Viet/Romans/2022-11-13-Romans-04-v19-24-Viet %})
 
-Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Sự chắc chắn của lời hứa. Ban sự sống cho kẻ chết. Đức tin của Áp-ra-ham.
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Bạn đặt đức tin vào đâu? Công bình bởi đức tin. Cho bất cứ ai tin.
 
 
 ## Lần viết đầu tiên - 2015
