--- a/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
+++ b/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
@@ -68,6 +68,9 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Sự
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Bạn đặt đức tin vào đâu? Công bình bởi đức tin. Cho bất cứ ai tin.
 
+##  [<u>Rô-ma 4:25-5:5</u>]({{ site.url }}{% post_url bible-studies-Viet/Romans/2022-11-13-Romans-04-v25-ch05-v05-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Tại sao Chúa chịu đóng đinh? Sự trông cậy về vinh hiển. Từ hoạn nạn đến trông cậy. Niềm hy vọng thực.
 
 ## Lần viết đầu tiên - 2015
 
