--- a/_posts/bible-studies/2015-01-17-Romans.md
+++ b/_posts/bible-studies/2015-01-17-Romans.md
@@ -71,6 +71,10 @@ The key concepts gathered from the study of this passage: Certainty of the promi
 
 The key concepts gathered from the study of this passage: Who do you have faith in? Righteousness based on faith. For everyone who believes.
 
+##  [<u>Romans 4:25-5:5</u>]({{ site.url }}{% post_url bible-studies/Romans/2022-11-13-Romans-04-v25-ch05-v05 %})
+
+The key concepts gathered from the study of this passage: Why did Christ die? The hope of God’s glory. From sufering to hope. True hope.
+
 ## First writing of Romans study (2015)
 
 What Paul wrote in this book of Romans is frequently misunderstood, or regarded with suspicion, that it gives folks a license to sin. This is not what Romans 3:20 said. For all practical intents and purposes, it says you will not get any closer to God by doing good, or be driven further from God by doing bad, because the law is only meant to show how sinful you are. It's an x-ray into your heart to show its utter depravity. It does not heal you, or give you life.
