--- a/_posts/bible-studies/2015-01-17-Romans.md
+++ b/_posts/bible-studies/2015-01-17-Romans.md
@@ -83,6 +83,10 @@ The key concepts gathered from the study of this passage: Why the Spirit was giv
 
 The key concepts gathered from the study of this passage: By one man. Law and transgression.
 
+##  [<u>Romans 6:1-11</u>]({{ site.url }}{% post_url bible-studies/Romans/2022-11-13-Romans-06-v01-11 %})
+
+The key concepts gathered from the study of this passage: Remain in sin so that grace may increase? Died to sin. Buried with Christ. No longer be enslaved to sin. Death leads to life. Once for all.
+
 ## First writing of Romans study (2015)
 
 What Paul wrote in this book of Romans is frequently misunderstood, or regarded with suspicion, that it gives folks a license to sin. This is not what Romans 3:20 said. For all practical intents and purposes, it says you will not get any closer to God by doing good, or be driven further from God by doing bad, because the law is only meant to show how sinful you are. It's an x-ray into your heart to show its utter depravity. It does not heal you, or give you life.
